--- a/index.html
+++ b/index.html
@@ -1,11 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-ca">
   <head>
+    <!-- metadata -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GitHub test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="David Huante" />
+    <meta
+      name="description"
+      content="David Huante's assignment portal for WDD230 Web Frontend Development I at BYU-Idaho"
+    />
+    <title>David's Assignment Portal</title>
+    <!-- CSS reference -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h2>GitHub test</h2>
+    <!-- Header area -->
+    <header class="myHeader">
+      <h1 class="mH_h1_name">David</h1>
+      <h1 class="mH_h1_lastName">Huante</h1>
+      <img
+        class="mH_img"
+        src="images/DHD_postal_150.jpg"
+        alt="David Huante's photo"
+      />
+    </header>
+    <!-- Main area -->
+    <main>
+      <h2>WDD230 Assignment Portal</h2>
+      <hr />
+      <ul>
+        <li>Lesson 1: <a href="#">Assignment Portal</a></li>
+        <li>Lesson 2: <a href="#">Design Principles</a></li>
+        <li>Lesson 3: <a href="#">Website Planing</a></li>
+        <li>Lesson 4: <a href="#">Preston Town Page I</a></li>
+        <li>Lesson 5: <a href="#">Preston Town Page II</a></li>
+        <li>Lesson 6: <a href="#">Responsive Images and Fonts</a></li>
+        <li>Lesson 7: <a href="#">Gallery Page</a></li>
+        <li>Lesson 8: <a href="#">Storm Center Page</a></li>
+        <li>Lesson 9: <a href="#">Weather Site Homepage</a></li>
+        <li>Lesson 10: <a href="#">Preston Weather API</a></li>
+        <li>Lesson 11: <a href="#">Weather Site</a></li>
+        <li>Lesson 12: <a href="#">Final Project I</a></li>
+        <li>Lesson 13: <a href="#">Final Project II</a></li>
+        <li>Lesson 14: <a href="#">Final Project III</a></li>
+      </ul>
+      <hr>
+    </main>
+    <!-- Footer area-->
+    <footer>
+      &copy; <span id="currentYear"></span> David Huante &nbsp; | &nbsp; Woodbridge, Canada &nbsp;|&nbsp;
+      <a href="http://www.byui.edu/online" target="_blank">BYU-I Online Learning</a> &nbsp;|&nbsp;
+      <span id="currentDate"></span>
+      <div class="divLastModified">
+        Last Modified: <span id="lastModified"></span>
+      </div>
+      <!-- Script's Dates section -->
+      <script>
+        let daynames = [
+          "Sunday",
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+        ];
+        let months = [
+          "January",
+          "February",
+          "March",
+          "April",
+          "May",
+          "June",
+          "July",
+          "August",
+          "September",
+          "October",
+          "November",
+          "December",
+        ];
+        let d = new Date();
+        let dayName = daynames[d.getDay()];
+        let monthName = months[d.getMonth()];
+        let fullDate =
+          dayName +
+          ", " +
+          monthName +
+          " " +
+          d.getDate() +
+          ", " +
+          d.getFullYear();
+        document.getElementById("currentDate").textContent = fullDate;
+        document.getElementById("currentYear").textContent = d.getFullYear();
+        let vLastModified = new Date(document.lastModified);
+        document.getElementById("lastModified").textContent = vLastModified;
+      </script>
+    </footer>
   </body>
 </html>
