--- a/construction.html
+++ b/construction.html
@@ -28,22 +28,8 @@
     <main>
       <h2>WDD230 Assignment Portal</h2>
       <hr />
-      <ul>
-        <li>Lesson 1: <a href="construction.html">Assignment Portal</a></li>
-        <li>Lesson 2: <a href="construction.html">Design Principles</a></li>
-        <li>Lesson 3: <a href="construction.html">Website Planing</a></li>
-        <li>Lesson 4: <a href="construction.html">Preston Town Page I</a></li>
-        <li>Lesson 5: <a href="construction.html">Preston Town Page II</a></li>
-        <li>Lesson 6: <a href="construction.html">Responsive Images and Fonts</a></li>
-        <li>Lesson 7: <a href="construction.html">Gallery Page</a></li>
-        <li>Lesson 8: <a href="construction.html">Storm Center Page</a></li>
-        <li>Lesson 9: <a href="construction.html">Weather Site Homepage</a></li>
-        <li>Lesson 10: <a href="construction.html">Preston Weather API</a></li>
-        <li>Lesson 11: <a href="construction.html">Weather Site</a></li>
-        <li>Lesson 12: <a href="construction.html">Final Project I</a></li>
-        <li>Lesson 13: <a href="construction.html">Final Project II</a></li>
-        <li>Lesson 14: <a href="construction.html">Final Project III</a></li>
-      </ul>
+      <h1 style="text-align: center;">*** Under Construction ***</h1>
+      <a href="index.html">Go to Home Page</a>
       <hr>
     </main>
     <!-- Footer area-->
