--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       content="David Huante's assignment portal for WDD230 Web Frontend Development I at BYU-Idaho"
     />
     <title>David's Assignment Portal</title>
+    <!-- Normalized CSS -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <!-- Import Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Montserrat&family=Questrial&display=swap" rel="stylesheet">
     <!-- CSS reference -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
