--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -16,40 +16,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Allura&family=Montserrat&family=Questrial&display=swap" rel="stylesheet">
     <!-- CSS reference -->
-    <link rel="stylesheet" href="css/small.css" />
-    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="../css/small.css">
+    <link rel="stylesheet" href="../css/medium.css">
   </head>
   <body>
     <!-- Header area -->
     <header class="myHeader">
-      <h1 class="mH_h1_name">David</h1>
-      <h1 class="mH_h1_lastName">Huante</h1>
-      <img
+        <img
         class="mH_img"
-        src="images/DHD_postal_150.jpg"
+        src="../images/DHD_postal_150.jpg"
         alt="David Huante s photo"
       />
+      <h1 class="mH_h1_name">David</h1>
+      <h1 class="mH_h1_lastName">Huante</h1>
+      
     </header>
     <!-- Main area -->
     <main>
       <h2>WDD230 Assignment Portal</h2>
       <hr />
-      <ul>
-        <li>Lesson 1: <a href="index.html">Assignment Portal (This page)</a></li>
-        <li>Lesson 2: <a href="lesson2/design-principles.html">Design Principles</a></li>
-        <li>Lesson 3: <a href="construction.html">Website Planing</a></li>
-        <li>Lesson 4: <a href="construction.html">Preston Town Page I</a></li>
-        <li>Lesson 5: <a href="construction.html">Preston Town Page II</a></li>
-        <li>Lesson 6: <a href="construction.html">Responsive Images and Fonts</a></li>
-        <li>Lesson 7: <a href="construction.html">Gallery Page</a></li>
-        <li>Lesson 8: <a href="construction.html">Storm Center Page</a></li>
-        <li>Lesson 9: <a href="construction.html">Weather Site Homepage</a></li>
-        <li>Lesson 10: <a href="construction.html">Preston Weather API</a></li>
-        <li>Lesson 11: <a href="construction.html">Weather Site</a></li>
-        <li>Lesson 12: <a href="construction.html">Final Project I</a></li>
-        <li>Lesson 13: <a href="construction.html">Final Project II</a></li>
-        <li>Lesson 14: <a href="construction.html">Final Project III</a></li>
-      </ul>
+      <h1 class="hTitlePage">Principles of Design in Web Development</h1>
+      <a href="index.html">Go to Home Page</a>
       <hr>
     </main>
     <!-- Footer area-->
@@ -61,7 +48,7 @@
         Last Modified: <span id="lastModified"></span>
       </div>
       <!-- Script's Dates section -->
-      <script src="script.js"></script>
+      <script src="../script.js"></script>
     </footer>
   </body>
 </html>
