--- a/construction.html
+++ b/construction.html
@@ -10,8 +10,14 @@
       content="David Huante's assignment portal for WDD230 Web Frontend Development I at BYU-Idaho"
     />
     <title>David's Assignment Portal</title>
+    <!-- Normalized CSS -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <!-- Import Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Montserrat&family=Questrial&display=swap" rel="stylesheet">
     <!-- CSS reference -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/small.css" />
+    <link rel="stylesheet" href="css/medium.css">
   </head>
   <body>
     <!-- Header area -->
@@ -21,7 +27,7 @@
       <img
         class="mH_img"
         src="images/DHD_postal_150.jpg"
-        alt="David Huante's photo"
+        alt="David Huante s photo"
       />
     </header>
     <!-- Main area -->
@@ -41,46 +47,7 @@
         Last Modified: <span id="lastModified"></span>
       </div>
       <!-- Script's Dates section -->
-      <script>
-        let daynames = [
-          "Sunday",
-          "Monday",
-          "Tuesday",
-          "Wednesday",
-          "Thursday",
-          "Friday",
-          "Saturday",
-        ];
-        let months = [
-          "January",
-          "February",
-          "March",
-          "April",
-          "May",
-          "June",
-          "July",
-          "August",
-          "September",
-          "October",
-          "November",
-          "December",
-        ];
-        let d = new Date();
-        let dayName = daynames[d.getDay()];
-        let monthName = months[d.getMonth()];
-        let fullDate =
-          dayName +
-          ", " +
-          monthName +
-          " " +
-          d.getDate() +
-          ", " +
-          d.getFullYear();
-        document.getElementById("currentDate").textContent = fullDate;
-        document.getElementById("currentYear").textContent = d.getFullYear();
-        let vLastModified = new Date(document.lastModified);
-        document.getElementById("lastModified").textContent = vLastModified;
-      </script>
+      <script src="script.js"></script>
     </footer>
   </body>
 </html>
