--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -36,6 +36,29 @@
       <h2>WDD230 Assignment Portal</h2>
       <hr />
       <h1 class="hTitlePage">Principles of Design in Web Development</h1>
+      <p class="intro">Design is not just something designers do. Design is marketing. Design is your product and how it works.<span style="font-size: .8em;font-style: italic;"> Peep Laja Published: Apr 17, 2019 | Last updated: Sep 25, 2020</span></p>
+      <section class="sec1">
+          <h2>White Space</h2>
+          <img src="../images/02 BYUDegreePortal_300px.jpg" alt="Screenshot of BYU Degree Portal">
+          <p>Site: <a href="https://degreeportal.byupathway.org/#/">degreeportal.byupathway.org</a><br><br>
+            <cite>"White space (also called “negative space”) is the portion of a web page that remains “empty.” It’s the space between graphics, margins, gutters, space between columns, space between lines of type, or visuals."</cite>
+            <p>The BYU Degrees home page shows the good handling of blank spaces to distinguish the different options of the portal and give the user a visual guide to know where to interact.<br></p>
+      </section>
+      <section class="sec2">
+        <h2>Hick's Law</h2>
+        <img src="../images/02 PelisSUD_300px.jpg" alt="Screenshot of Latter-day Saints movies in Spanish portal">
+        <p>Site: <a href="https://discursosud.com/peliculas-sud/">discursosud.com/peliculas-sud</a><br><br>
+        <cite>Hick’s Law says that with every additional choice increases the time required to take a decision.<br>The more options a user has on your website, the more difficult it is to use (if it’s used at all). We need to eliminate choices. To make a better web design, focus on eliminating distracting options throughout the design process.</cite></p>
+        <p>This page, unofficial, of speeches and films of the church, is a clear example of how not to show options to the users of the site since it offers so many options and so much text that it is difficult to read and decide.<br></p>
+      </section>
+      <section>
+          <h2>Visual Hierarchy</h2>
+          <img src="../images/02 Raspberry Site_300px.jpg" alt="Screenshot of Raspberry Pi portal">
+          <p>Site: <a href="https://www.raspberrypi.org/">raspberrypi.org</a><br><br>
+        <cite>Visual hierarchy is one of the most important principles behind good web design. It’s the order in which the human eye perceives what it sees.<br>
+            Certain parts of a website are more important than others (forms, calls to action, value proposition, etc.).</cite> </p>
+            <p>On this page designers created a very well achieved visual effect where they visually attract the user's attention. They use the size of the images and the size of the text to attract attention as well as the contrast in the colors<br></p>
+      </section>
       <a href="index.html">Go to Home Page</a>
       <hr>
     </main>
