--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -39,7 +39,7 @@
       <h2>WDD230 Assignment Portal</h2>
 
       <h1>Principles of Design in Web Development</h1>
-      <p class="intro">
+      <p>
         Design is not just something designers do. Design is marketing. Design
         is your product and how it works.<span
           style="font-size: 0.8em; font-style: italic"
@@ -51,7 +51,7 @@
         <section class="sec1">
           <h2>White Space</h2>
           <img
-            src="../images/02 BYUDegreePortal_300px.jpg"
+            src="../images/BYUDegreePortal_300px.jpg"
             alt="Screenshot of BYU Degree Portal"
           />
           <p>
@@ -76,7 +76,7 @@
         <section class="sec2">
           <h2>Hick's Law</h2>
           <img
-            src="../images/02 PelisSUD_300px.jpg"
+            src="../images/PelisSUD_300px.jpg"
             alt="Screenshot of Latter-day Saints movies in Spanish portal"
           />
           <p>
@@ -103,7 +103,7 @@
         <section>
           <h2>Visual Hierarchy</h2>
           <img
-            src="../images/02 Raspberry Site_300px.jpg"
+            src="../images/Raspberry Site_300px.jpg"
             alt="Screenshot of Raspberry Pi portal"
           />
           <p>
