--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -103,7 +103,7 @@
         <section>
           <h2>Visual Hierarchy</h2>
           <img
-            src="../images/Raspberry Site_300px.jpg"
+            src="../images/Raspberry_Site_300px.jpg"
             alt="Screenshot of Raspberry Pi portal"
           />
           <p>
