--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
     />
     <!-- CSS reference -->
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/small.css" />
     <link rel="stylesheet" href="../css/medium.css" />
     <link rel="stylesheet" href="../css/large.css" />
