--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     />
     <title>David's Assignment Portal</title>
     <!-- Normalized CSS -->
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css" />
     <!-- Import Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Allura&family=Montserrat&family=Questrial&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Allura&family=Montserrat&family=Questrial&display=swap"
+      rel="stylesheet"
+    />
     <!-- CSS reference -->
     <link rel="stylesheet" href="css/small.css" />
-    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/medium.css" />
   </head>
   <body>
     <!-- Header area -->
@@ -35,12 +38,19 @@
       <h2>WDD230 Assignment Portal</h2>
       <hr />
       <ul>
-        <li>Lesson 1: <a href="index.html">Assignment Portal (This page)</a></li>
-        <li>Lesson 2: <a href="lesson2/design-principles.html">Design Principles</a></li>
-        <li>Lesson 3: <a href="construction.html">Website Planing</a></li>
+        <li>
+          Lesson 1: <a href="index.html">Assignment Portal (This page)</a>
+        </li>
+        <li>
+          Lesson 2:
+          <a href="lesson2/design-principles.html">Design Principles</a>
+        </li>
+        <li>Lesson 3: <a href="lesson3/index.html">Website Planning</a></li>
         <li>Lesson 4: <a href="construction.html">Preston Town Page I</a></li>
         <li>Lesson 5: <a href="construction.html">Preston Town Page II</a></li>
-        <li>Lesson 6: <a href="construction.html">Responsive Images and Fonts</a></li>
+        <li>
+          Lesson 6: <a href="construction.html">Responsive Images and Fonts</a>
+        </li>
         <li>Lesson 7: <a href="construction.html">Gallery Page</a></li>
         <li>Lesson 8: <a href="construction.html">Storm Center Page</a></li>
         <li>Lesson 9: <a href="construction.html">Weather Site Homepage</a></li>
@@ -50,12 +60,16 @@
         <li>Lesson 13: <a href="construction.html">Final Project II</a></li>
         <li>Lesson 14: <a href="construction.html">Final Project III</a></li>
       </ul>
-      <hr>
+      <hr />
     </main>
     <!-- Footer area-->
     <footer>
-      &copy; <span id="currentYear"></span> David Huante &nbsp; | &nbsp; Woodbridge, Canada &nbsp;|&nbsp;
-      <a href="http://www.byui.edu/online" target="_blank">BYU-I Online Learning</a> &nbsp;|&nbsp;
+      &copy; <span id="currentYear"></span> David Huante &nbsp; | &nbsp;
+      Woodbridge, Canada &nbsp;|&nbsp;
+      <a href="http://www.byui.edu/online" target="_blank"
+        >BYU-I Online Learning</a
+      >
+      &nbsp;|&nbsp;
       <span id="currentDate"></span>
       <div class="divLastModified">
         Last Modified: <span id="lastModified"></span>
