--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -10,8 +10,6 @@
       content="David Huante's assignment portal for WDD230 Web Frontend Development I at BYU-Idaho"
     />
     <title>David's Assignment Portal</title>
-    <!-- Normalized CSS -->
-    <link rel="stylesheet" href="css/normalize.css" />
     <!-- Import Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -19,7 +17,7 @@
       rel="stylesheet"
     />
     <!-- CSS reference -->
-    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/small.css" />
     <link rel="stylesheet" href="../css/medium.css" />
     <link rel="stylesheet" href="../css/large.css" />
