--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a href="lesson2/design-principles.html">Design Principles</a>
         </li>
         <li>Lesson 3: <a href="lesson3/index.html">Website Planning</a></li>
-        <li>Lesson 4: <a href="construction.html">Preston Town Page I</a></li>
+        <li>Lesson 4: <a href="lesson4/preston-4.html">Preston Town Page I</a></li>
         <li>Lesson 5: <a href="construction.html">Preston Town Page II</a></li>
         <li>
           Lesson 6: <a href="construction.html">Responsive Images and Fonts</a>
