--- a/lesson3/typo.html
+++ b/lesson3/typo.html
@@ -13,8 +13,9 @@
     <!-- Import Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Noto+Serif:ital@1&display=swap"
       rel="stylesheet"
+    />
     />
     <!-- CSS reference -->
     <link rel="stylesheet" href="css/normalize.css" />
@@ -47,8 +48,8 @@
       </p>
       <p>The letters used are as follows:</p>
       <ul>
-        <li id="font-lato">Headers is 'Lato'</li>
-        <li id="font-roboto">General text is 'Roboto'</li>
+        <li id="font-lato">Headers is 'Noto Serif'</li>
+        <li id="font-roboto">General text is 'Lato'</li>
       </ul>
       <p>Below are examples of size and typography.</p>
       <div class="fonts">
