--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -15,26 +15,27 @@
 </head>
 <body>
     <header>
-        <picture>
-            <img id="imgHeader" src="images/logo-natureish.jpg" alt="Natureish logo image">
-        </picture>
-        <section><h1>Natureish Forecast</h1>
-        <h2>"Your source for weather data"</h2></section>
-        <nav id="navHeader">
-            <button onclick="toggleMenu()">&#9776</button>
-            <ul id="primaryNav" class="hide">
-                <li><a href="#">Home</a> </li>
-                <li class="active"><a href="preston-4.html">Preston</a> </li>
-                <li><a href="#">Soda Springs</a> </li>
-                <li><a href="#">Fish Haven</a> </li>
-                <li><a href="#">Storm Center</a> </li>
-                <li><a href="#">Gallery</a> </li>
-            </ul>
-        </nav>
+        
+        <div class="l3DivLogo"><img id="imgHeader" src="images/logo-natureish.jpg" alt="Natureish logo image"></div>
+       <section> 
+       <h1>Natureish Forecast</h1>
+       <p>"Your source for weather data"</p></section>
+        
     </header>
+    <nav id="navHeader">
+        <button onclick="toggleMenu()">&#9776</button>
+        <ul id="primaryNav" class="hide">
+            <li><a href="#">Home</a> </li>
+            <li class="active"><a href="preston-4.html">Preston</a> </li>
+            <li><a href="#">Soda Springs</a> </li>
+            <li><a href="#">Fish Haven</a> </li>
+            <li><a href="#">Storm Center</a> </li>
+            <li><a href="#">Gallery</a> </li>
+        </ul>
+    </nav>
     <main>
         <h2>Preston, Idaho</h2>
-        <img src="images/imgPreston.jpg" alt="Preston City's logo" title="https://www.prestonidaho.net/">
+        <div class="l3DivLogo"><img src="images/imgPreston.jpg" alt="Preston City's logo" title="https://www.prestonidaho.net/"></div>
         <p>Preston is a city located in Franklin County in the US state of Idaho</p>
         <div class="contentBox">Weather Summary</div>
         <div class="contentBox">5 Day Forecast</div>
