--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -8,21 +8,21 @@
     <meta name="description" content="Natureish Forecast's Page"/>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
-    <!-- <link rel="stylesheet" href="css/medium.css">
-    <link rel="stylesheet" href="css/large.css"> -->
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Noto+Serif:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         
-        <div class="l3DivLogo"><img id="imgHeader" src="images/logo-natureish.jpg" alt="Natureish logo image"></div>
+        <div class="l4DivLogo"><img id="imgHeader" src="images/logo-natureish.jpg" alt="Natureish logo image"></div>
        <section> 
        <h1>Natureish Forecast</h1>
        <p>"Your source for weather data"</p></section>
         
     </header>
-    <nav id="navHeader">
+    <nav class="clearfix">
         <button onclick="toggleMenu()">&#9776</button>
         <ul id="primaryNav" class="hide">
             <li><a href="#">Home</a> </li>
@@ -35,7 +35,7 @@
     </nav>
     <main>
         <h2>Preston, Idaho</h2>
-        <div class="l3DivLogo"><img src="images/imgPreston.jpg" alt="Preston City's logo" title="https://www.prestonidaho.net/"></div>
+        <div class="imgPreston"><img src="images/imgPreston.jpg" alt="Preston City's logo" title="https://www.prestonidaho.net/"></div>
         <p>Preston is a city located in Franklin County in the US state of Idaho</p>
         <div class="contentBox">Weather Summary</div>
         <div class="contentBox">5 Day Forecast</div>
