--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
       href="https://fonts.googleapis.com/css2?family=Allura&family=Montserrat&family=Questrial&display=swap"
       rel="stylesheet"
     />
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="favicon.ico" />
     <!-- CSS reference -->
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
   </head>
+
   <body>
     <!-- Header area -->
     <header class="myHeader">
@@ -46,7 +49,9 @@
           <a href="lesson2/design-principles.html">Design Principles</a>
         </li>
         <li>Lesson 3: <a href="lesson3/index.html">Website Planning</a></li>
-        <li>Lesson 4: <a href="lesson4/preston-4.html">Preston Town Page I</a></li>
+        <li>
+          Lesson 4: <a href="lesson4/preston-4.html">Preston Town Page I</a>
+        </li>
         <li>Lesson 5: <a href="construction.html">Preston Town Page II</a></li>
         <li>
           Lesson 6: <a href="construction.html">Responsive Images and Fonts</a>
