--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       href="https://fonts.googleapis.com/css2?family=Allura&family=Montserrat&family=Questrial&display=swap"
       rel="stylesheet"
     />
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico" />
     <!-- CSS reference -->
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="favicon.ico" />
   </head>
 
   <body>
@@ -52,7 +52,7 @@
         <li>
           Lesson 4: <a href="lesson4/preston-4.html">Preston Town Page I</a>
         </li>
-        <li>Lesson 5: <a href="construction.html">Preston Town Page II</a></li>
+        <li>Lesson 5: <a href="lesson5/preston-5.html" >Preston Town Page II</a></li>
         <li>
           Lesson 6: <a href="construction.html">Responsive Images and Fonts</a>
         </li>
