--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -35,7 +35,7 @@
     </nav>
     <main>
         <h2>Preston, Idaho</h2>
-        <div class="imgPreston"><img src="images/imgPreston.jpg" alt="Preston City's logo" title="https://www.prestonidaho.net/"></div>
+        <div class="imgPreston"><img src="images/Preston-Idaho-Bush.jpg" alt="Preston City's logo" title="https://www.prestonidaho.net/"></div>
         <p>Preston is a city located in Franklin County in the US state of Idaho</p>
         <div class="contentBox">Weather Summary</div>
         <div class="contentBox">5 Day Forecast</div>
