--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <!-- Normalized CSS -->
     <link rel="stylesheet" href="css/normalize.css" />
     <!-- Import Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Allura&family=Montserrat&family=Questrial&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <!-- CSS reference -->
     <link rel="stylesheet" href="css/small.css" />
     <link rel="stylesheet" href="css/medium.css" />
@@ -54,7 +54,7 @@
         </li>
         <li>Lesson 5: <a href="lesson5/preston-5.html" >Preston Town Page II</a></li>
         <li>
-          Lesson 6: <a href="construction.html">Responsive Images and Fonts</a>
+          Lesson 6: <a href="lesson6/preston-6.html" >Responsive Images and Fonts</a>
         </li>
         <li>Lesson 7: <a href="construction.html">Gallery Page</a></li>
         <li>Lesson 8: <a href="construction.html">Storm Center Page</a></li>
@@ -82,5 +82,14 @@
       <!-- Script's Dates section -->
       <script src="script.js"></script>
     </footer>
+    <!-- JavaScript Library for using Fonts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+<script>
+  WebFont.load({
+    google: {
+      families: ['Allura', 'Questrial', 'Montserrat', 'sans-serif']
+    }
+  });
+</script>
   </body>
 </html>
