--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <title>Progressive Loading of Images</title>
     <link rel="stylesheet" href="/css/normalize.css" />
-    <link rel="stylesheet" href="css/small.css" />
+    <link rel="stylesheet" href="css/small-lazy.css" />
   </head>
   <body>
     <h1>Lazy Loading Dog Images</h1>
