--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           Lesson 6: <a href="lesson6/preston-6.html" >Responsive Images and Fonts</a>
         </li>
         <li>Lesson 7: <a href="lesson7/gallery-7.html" >Gallery Page</a></li>
-        <li>Lesson 8: <a href="construction.html">Storm Center Page</a></li>
+        <li>Lesson 8: <a href="lesson8/stormcenter.html" >Storm Center Page</a></li>
         <li>Lesson 9: <a href="construction.html">Weather Site Homepage</a></li>
         <li>Lesson 10: <a href="construction.html">Preston Weather API</a></li>
         <li>Lesson 11: <a href="construction.html">Weather Site</a></li>
