--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <li>Lesson 14: <a href="construction.html">Final Project III</a></li>
       </ul>
       <hr />
+      <a href="/lesson8/tablebuild.html">Table Build</a>
     </main>
     <!-- Footer area-->
     <footer>
