--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </li>
         <li>Lesson 7: <a href="lesson7/gallery-7.html" >Gallery Page</a></li>
         <li>Lesson 8: <a href="lesson8/stormcenter.html" >Storm Center Page</a></li>
-        <li>Lesson 9: <a href="construction.html">Weather Site Homepage</a></li>
+        <li>Lesson 9: <a href="lesson9/index.html" >Weather Site Homepage</a></li>
         <li>Lesson 10: <a href="construction.html">Preston Weather API</a></li>
         <li>Lesson 11: <a href="construction.html">Weather Site</a></li>
         <li>Lesson 12: <a href="construction.html">Final Project I</a></li>
