--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -49,6 +49,7 @@
               cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
               proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ex suscipit neque officiis distinctio sequi illum magni adipisci facere, numquam omnis voluptatem velit facilis id possimus rerum nobis ad! Amet?</p>
           </div>
 
         <!-- Link to WDD230 Portal-->
@@ -59,8 +60,8 @@
     <footer>
         <!-- Map and Contact info-->
         <div id="mapdiv">
-            
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d189588.49700931716!2d-111.97165226697122!3d42.05753140525934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20Idaho%2083263%2C%20EE.%20UU.!5e0!3m2!1ses-419!2sca!4v1612625528563!5m2!1ses-419!2sca" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47365.726282733616!2d-111.91534440511981!3d42.099805311773146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8754f78c7cda6c31%3A0xf1b3b4fc465a4a3f!2sPreston%2C%20Idaho%2083263%2C%20EE.%20UU.!5e0!3m2!1ses-419!2sca!4v1615099244642!5m2!1ses-419!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
             <section id="contact_info">
               <h4>Contact Us!</h4>
               <p>
